# gemmforge

./: .gitlab-ci.yml  README.md
.ci/: Dockerfile.nvidia  Jenkinsfile  Jenkinsfile.main
.ci/docker/: Dockerfile.cuda10  Dockerfile.cuda11  Dockerfile.hipsycl_base
benchmarks/: requirements.txt
benchmarks/bandwidth/: CMakeLists.txt  global.cpp  global_sycl.cpp  sycl_kernel.cpp
benchmarks/csa/: CMakeLists.txt  generate.py  main.cpp  params.yaml
benchmarks/double-gemm/: CMakeCache.txt  CMakeLists.txt  generate.py  main.cpp
benchmarks/gemm-chain/: CMakeLists.txt  bench.tmpl  generate.py
benchmarks/gemm-chain2/: bench.tmpl  config.yaml  generate.py  params.yaml
benchmarks/shared-mem/: CMakeLists.txt  cuda_kernel.cu  kernel.h  main.cpp
benchmarks/simple-gemm/: CMakeLists.txt  generate.py  main.cpp
cmake/: amd.cmake  nvidia.cmake  setupGpuTarget.cmake  setupOptions.cmake  setupTarget.cmake  sycl.cmake
common/: csa.cpp  csa.h  gemm.cpp  gemm.h
common/test_drivers/: simple_driver.cpp  simple_driver_sycl.cpp
docs/source/: conf.py
examples/: csa.py  gemm.py  gemm_sycl.py  initializer.py  mat-vec.py  sparse_gemm.py
gemmforge/: __init__.py  abstract_gemmlike_generator.py  abstract_generator.py  abstract_loader.py  arch.py  basic_types.py  csa_generator.py  gemm_generator.py  interfaces.py  log_generator.py  loop_over_gemm_generator.py  product_generator.py  shr_mem_loaders.py  shr_transpose_mem_loaders.py  sycl_gemm_generator.py  symbol_table.py
gemmforge/arch_dictionary/: __init__.py  abstract_arch_dictionary.py  amd_arch_dictionary.py  (+1 more)
(+127 files in other folders)
